<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transferencia"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        android:gravity="center_horizontal"

        />


    <Spinner
        android:id="@+id/spinner"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:gravity="center_horizontal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline">


    </Spinner>

    <RadioGroup
        android:id="@+id/elegir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/cuenta_propia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/propia"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/cuenta_ajena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ajena"
            />

    </RadioGroup>


    <Spinner
        android:id="@+id/spinner_propia"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:gravity="center_horizontal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/elegir">

    </Spinner>
    <EditText
        android:id="@+id/text_ajena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Cuenta de destino"
        android:visibility="invisible"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/elegir"
        />

    <TextView
        android:id="@+id/cantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_propia"
        android:text="@string/cantidad"

        />

    <EditText
        android:id="@+id/cantidad_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="70dp"
        android:hint="introduce una cantidad"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cantidad"
        app:layout_constraintTop_toBottomOf="@id/spinner_propia" />
    <Spinner
        android:id="@+id/divisa"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/cantidad_text"
        app:layout_constraintTop_toBottomOf="@id/spinner_propia"
        android:layout_marginTop="30dp"
        />

    <CheckBox
        android:id="@+id/justificante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Justificante"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cantidad"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/boton_enviar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_2"
        app:layout_constraintTop_toBottomOf="@id/justificante"
        android:text="@string/enviar"
        android:layout_marginTop="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="30dp"
        >

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/boton_cancelar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideline_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/justificante"
        android:text="@string/cancelar"
        android:layout_marginTop="80dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="50dp"
        >

    </com.google.android.material.button.MaterialButton>




</androidx.constraintlayout.widget.ConstraintLayout>